[Fix] Left Alignment - ipDetails extra text centering

--- a/src/sass/_parts/body-cell.sass
+++ b/src/sass/_parts/body-cell.sass
@@ -30,6 +30,9 @@
 		._isIpDetails &,
 		._isButton &,
 			overflow: visible
+		
+		._isIpDetails &,
+			text-align: center
 
 
 	@import 'body-cell.expandButton'
